--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -4,4 +4,6 @@
 
 @tailwind utilities;
 
-
+.addMenuCard { 
+    @apply items-center text-9xl fill-current text-green hover:text-green-light focus:text-green-dark focus:bg-green-dark md:flex hidden bordered rounded-lg h-full justify-center border-2 border-green hover:border-green-light
+ }
